# backend_showdown_2024_q1

./: .gitignore  LICENSE  README.md
matheusbaptistella-rust/: README.md
performance_tests/load-test/user-files/results/rinhabackendcrebitossimulation-20240301211111770/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
performance_tests/load-test/user-files/results/rinhabackendcrebitossimulation-20240301211111770/js/: all_sessions.js  global_stats.json  stats.js  stats.json
performance_tests/load-test/user-files/results/rinhabackendcrebitossimulation-20240302132911868/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
performance_tests/load-test/user-files/results/rinhabackendcrebitossimulation-20240302135142771/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
phase1_local/: .env  README.md
phase1_local/src/: api.rs  db.rs
phase2_deploy/: Cargo.toml  Dockerfile  README.md  compose.yaml  db_init_script.sql
phase2_deploy/src/: api.rs  db.rs  main.rs  model.rs
phase3_optimizations/: Cargo.toml  Dockerfile  README.md  compose.yaml
phase3_optimizations/src/: api.rs  db.rs  main.rs
v1/: .env  Cargo.toml
v1/migrations/: 0001_initial.sql  001_initial.sql
v1/src/: api.rs  db.rs  main.rs
v1/tests/: quick_dev.rs
(+8 files in other folders)
