[package]
name = "backend_showdown_2024_q1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
#chrono = "0.4.34"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres"]}
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"